fixed planet titles to make visible

--- a/assets/css/main1.css
+++ b/assets/css/main1.css
@@ -24,15 +24,15 @@ html{
 }
 .row1 h2 {
     font-family: 'Ultra', serif;
-    color: black;
+    color: gray;
 }
 .row2 h2 {
     font-family: 'Ultra', serif;
-    color: black;
+    color: gray;
 }
 .row3 h2 {
     font-family: 'Ultra', serif;
-    color: black;
+    color: gray;
 }
 /*PLANETS CSS END*/
 
